--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "react-native-elements": "^1.0.0-beta8",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-web": "^0.11.4",
-    "react-navigation": "^2.0.1"
+    "react-navigation": "^2.0.1",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^6.0.0"
