--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "expo": "^34.0.1",
+    "expo-mail-composer": "^6.0.0",
     "expo-secure-store": "^6.0.0",
     "react": "16.8.3",
     "react-devtools": "^3.6.3",
