--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "expo": "^34.0.1",
+    "expo-image-picker": "^6.0.0",
     "expo-mail-composer": "^6.0.0",
     "expo-secure-store": "^6.0.0",
     "react": "16.8.3",
@@ -19,6 +20,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^1.0.0-beta8",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-imagepicker": "^2.0.0",
     "react-native-swipeout": "^2.3.6",
     "react-native-web": "^0.11.4",
     "react-navigation": "^2.0.1",
